<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="55dp"
            android:text="@string/welcome_message" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="95dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="95dp"
            android:text="@string/size_desk" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:text="@string/size_5x5" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:text="@string/size_3x3" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="160dp"
            android:onClick="startActivity"
            android:text="@string/start_button" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startButton"
            app:srcCompat="@drawable/logo" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>